variables.RunFour.scala.code
var nbbiscuit=0
while (estSurBiscuit==false){
  avance()
  	if (estSurBiscuit==vrai){
      nbbiscuit=nbbiscuit+1
      while (nbbiscuit<4){
        avance()
      }
    }
}
  
